[project]
name = "omop-patient-viewer"
version = "0.1.0"
description = "Terminal patient viewer for OMOP CDM CSV datasets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "rich>=13.9.0",
  "textual>=0.86.0",
]

[project.scripts]
omop-patient-viewer = "omop_patient_viewer.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omop_patient_viewer"]

[tool.ruff]
line-length = 100
target-version = "py311"
